tests/outref/TV007.ref

select * from nonexistanttable;

INDEX fake_index "^notaglobal(""fake_index"",fields(""name""),fields(""age""),keys(""id""))";

select * from names;
[ INFO] PATH:LINENUM DATE TIME : INFO_LOADED_CONFIG : Loaded config from $PWD/octo.conf
[ INFO] PATH:LINENUM DATE TIME : INFO_RECORDING_ENV_VARS : # Recording pertinent ydb_* env var values at process startup
[TRACE] PATH:LINENUM DATE TIME : INFO_OCTO_STARTED : Octo started
Starting parse
Entering state sss
Next token is token SELECT (: )
Shifting token SELECT (: )
Entering state sss
Next token is token ASTERISK (: )
Reducing stack by rule rrr (line lll):
-> $$ = nterm set_quantifier (: )
Entering state sss
Next token is token ASTERISK (: )
Shifting token ASTERISK (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = token ASTERISK (: )
-> $$ = nterm select_sublist (: )
Entering state sss
Next token is token FROM (: )
Reducing stack by rule rrr (line lll):
-> $$ = nterm select_sublist_tail (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm select_sublist (: )
   $2 = nterm select_sublist_tail (: )
-> $$ = nterm select_list (: )
Entering state sss
Next token is token FROM (: )
Shifting token FROM (: )
Entering state sss
Next token is token IDENTIFIER_ALONE (: )
Shifting token IDENTIFIER_ALONE (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = token IDENTIFIER_ALONE (: )
-> $$ = nterm IDENTIFIER_START (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm IDENTIFIER_START (: )
-> $$ = nterm identifier_body (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm identifier_body (: )
-> $$ = nterm regular_identifier (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm regular_identifier (: )
-> $$ = nterm actual_identifier (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm actual_identifier (: )
-> $$ = nterm identifier (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm identifier (: )
-> $$ = nterm column_name (: )
Entering state sss
Next token is token SEMICOLON (: )
Reducing stack by rule rrr (line lll):
   $1 = nterm column_name (: )
[TRACE] PATH:LINENUM DATE TIME : INFO_TABLE_SEARCH : Searching for table NONEXISTANTTABLE
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_TABLE : Unknown table: NONEXISTANTTABLE
Error with syntax near (line 1, column 15):

select * from nonexistanttable;
              ^^^^^^^^^^^^^^^^
Error: popping token FROM (: )
Error: popping nterm select_list (: )
Error: popping nterm set_quantifier (: )
Error: popping token SELECT (: )
Shifting token error (: )
Entering state sss
Next token is token SEMICOLON (: )
Shifting token SEMICOLON (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = token SEMICOLON (: )
-> $$ = nterm semicolon_or_eof (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = token error (: )
   $2 = nterm semicolon_or_eof (: )
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select * from nonexistanttable;
[ INFO] PATH:LINENUM DATE TIME : INFO_PARSING_DONE : Parsing done for SQL command [select * from nonexistanttable;]
[ INFO] PATH:LINENUM DATE TIME : INFO_RETURNING_FAILURE : Returning failure from run_query
Starting parse
Entering state sss
Next token is token INDEX (: )
Shifting token INDEX (: )
Entering state sss
Next token is token IDENTIFIER_ALONE (: )
Shifting token IDENTIFIER_ALONE (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = token IDENTIFIER_ALONE (: )
-> $$ = nterm IDENTIFIER_START (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm IDENTIFIER_START (: )
-> $$ = nterm identifier_body (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm identifier_body (: )
-> $$ = nterm regular_identifier (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm regular_identifier (: )
-> $$ = nterm actual_identifier (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm actual_identifier (: )
-> $$ = nterm identifier (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm identifier (: )
-> $$ = nterm column_name (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm column_name (: )
-> $$ = nterm index_name (: )
Entering state sss
Next token is token LITERAL (: )
Shifting token LITERAL (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = token LITERAL (: )
-> $$ = nterm literal_value (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = token INDEX (: )
   $2 = nterm index_name (: )
   $3 = nterm literal_value (: )
[ WARN] PATH:LINENUM DATE TIME : ERR_FEATURE_NOT_IMPLEMENTED : Feature not implemented: INDEX statements
-> $$ = nterm index_definition (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm index_definition (: )
-> $$ = nterm sql_schema_definition_statement (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm sql_schema_definition_statement (: )
-> $$ = nterm sql_schema_statement (: )
Entering state sss
Next token is token SEMICOLON (: )
Shifting token SEMICOLON (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = token SEMICOLON (: )
-> $$ = nterm semicolon_or_eof (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm sql_schema_statement (: )
   $2 = nterm semicolon_or_eof (: )
[ INFO] PATH:LINENUM DATE TIME : INFO_PARSING_DONE : Parsing done for SQL command [INDEX fake_index "^notaglobal(""fake_index"",fields(""name""),fields(""age""),keys(""id""))";]
[ INFO] PATH:LINENUM DATE TIME : INFO_CURSOR : Generating SQL for CURSOR_NUM
Starting parse
Entering state sss
Next token is token SELECT (: )
Shifting token SELECT (: )
Entering state sss
Next token is token ASTERISK (: )
Reducing stack by rule rrr (line lll):
-> $$ = nterm set_quantifier (: )
Entering state sss
Next token is token ASTERISK (: )
Shifting token ASTERISK (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = token ASTERISK (: )
-> $$ = nterm select_sublist (: )
Entering state sss
Next token is token FROM (: )
Reducing stack by rule rrr (line lll):
-> $$ = nterm select_sublist_tail (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm select_sublist (: )
   $2 = nterm select_sublist_tail (: )
-> $$ = nterm select_list (: )
Entering state sss
Next token is token FROM (: )
Shifting token FROM (: )
Entering state sss
Next token is token IDENTIFIER_ALONE (: )
Shifting token IDENTIFIER_ALONE (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = token IDENTIFIER_ALONE (: )
-> $$ = nterm IDENTIFIER_START (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm IDENTIFIER_START (: )
-> $$ = nterm identifier_body (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm identifier_body (: )
-> $$ = nterm regular_identifier (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm regular_identifier (: )
-> $$ = nterm actual_identifier (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm actual_identifier (: )
-> $$ = nterm identifier (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm identifier (: )
-> $$ = nterm column_name (: )
Entering state sss
Next token is token SEMICOLON (: )
Reducing stack by rule rrr (line lll):
   $1 = nterm column_name (: )
[TRACE] PATH:LINENUM DATE TIME : INFO_TABLE_SEARCH : Searching for table NAMES
-> $$ = nterm table_reference (: )
Entering state sss
Next token is token SEMICOLON (: )
Reducing stack by rule rrr (line lll):
-> $$ = nterm table_reference_list_tail (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm table_reference (: )
   $2 = nterm table_reference_list_tail (: )
-> $$ = nterm table_reference_list (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = token FROM (: )
   $2 = nterm table_reference_list (: )
-> $$ = nterm from_clause (: )
Entering state sss
Next token is token SEMICOLON (: )
Reducing stack by rule rrr (line lll):
-> $$ = nterm where_clause (: )
Entering state sss
Next token is token SEMICOLON (: )
Reducing stack by rule rrr (line lll):
-> $$ = nterm group_by_clause (: )
Entering state sss
Next token is token SEMICOLON (: )
Reducing stack by rule rrr (line lll):
-> $$ = nterm having_clause (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm from_clause (: )
   $2 = nterm where_clause (: )
   $3 = nterm group_by_clause (: )
   $4 = nterm having_clause (: )
-> $$ = nterm table_expression (: )
Entering state sss
Next token is token SEMICOLON (: )
Reducing stack by rule rrr (line lll):
-> $$ = nterm optional_order_by (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = token SELECT (: )
   $2 = nterm set_quantifier (: )
   $3 = nterm select_list (: )
   $4 = nterm table_expression (: )
   $5 = nterm optional_order_by (: )
-> $$ = nterm query_specification (: )
Entering state sss
Next token is token SEMICOLON (: )
Reducing stack by rule rrr (line lll):
-> $$ = nterm optional_query_words (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm query_specification (: )
   $2 = nterm optional_query_words (: )
-> $$ = nterm sql_select_statement (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm sql_select_statement (: )
-> $$ = nterm simple_table (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm simple_table (: )
-> $$ = nterm non_join_query_primary (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm non_join_query_primary (: )
-> $$ = nterm non_join_query_term (: )
Entering state sss
Next token is token SEMICOLON (: )
Reducing stack by rule rrr (line lll):
   $1 = nterm non_join_query_term (: )
-> $$ = nterm non_join_query_expression (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm non_join_query_expression (: )
-> $$ = nterm query_expression (: )
Entering state sss
Next token is token SEMICOLON (: )
Shifting token SEMICOLON (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = token SEMICOLON (: )
-> $$ = nterm semicolon_or_eof (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm query_expression (: )
   $2 = nterm semicolon_or_eof (: )
[ INFO] PATH:LINENUM DATE TIME : INFO_PARSING_DONE : Parsing done for SQL command [select * from names;]
[ INFO] PATH:LINENUM DATE TIME : INFO_CURSOR : Generating SQL for CURSOR_NUM
[TRACE] PATH:LINENUM DATE TIME : INFO_ENTERING_FUNCTION : Entering hash_canonical_query
[ INFO] PATH:LINENUM DATE TIME : INFO_M_PLAN : Generating M file [$PWD/_ydboctoP*.m] (to execute SQL query)
[TRACE] PATH:LINENUM DATE TIME : INFO_ENTERING_FUNCTION : Entering emit_select_statement
[DEBUG] PATH:LINENUM DATE TIME : INFO_CURPLAN : LOGICAL_PLAN BEFORE optimize_logical_plan() follows 
LP_SELECT_QUERY: 
  LP_PROJECT: 
    LP_COLUMN_LIST: 
      LP_WHERE: 
        LP_COLUMN_ALIAS: NAMES(1).ID
        LP_COLUMN_LIST_ALIAS: 
        - type: INTEGER_LITERAL
        - alias: ID
      LP_WHERE: 
        LP_COLUMN_ALIAS: NAMES(1).FIRSTNAME
        LP_COLUMN_LIST_ALIAS: 
        - type: STRING_LITERAL
        - alias: FIRSTNAME
      LP_WHERE: 
        LP_COLUMN_ALIAS: NAMES(1).LASTNAME
        LP_COLUMN_LIST_ALIAS: 
        - type: STRING_LITERAL
        - alias: LASTNAME
    LP_SELECT: 
      LP_TABLE_JOIN: 
        LP_TABLE: NAMES
      LP_CRITERIA: 
        LP_KEYS: 
        LP_SELECT_OPTIONS: 
          LP_WHERE: 
          LP_SELECT_MORE_OPTIONS: 
            LP_KEYWORDS: 
  LP_OUTPUT: 
    LP_KEY: 
    - table_name: 
    - column_name: 
    - unique_id: 3
    - method: LP_KEY_ADVANCE
    - xref_key: false
    - uses_xref_key: false

[DEBUG] PATH:LINENUM DATE TIME : INFO_CURPLAN : LOGICAL_PLAN AFTER optimize_logical_plan() follows 
LP_SELECT_QUERY: 
  LP_PROJECT: 
    LP_COLUMN_LIST: 
      LP_WHERE: 
        LP_COLUMN_ALIAS: NAMES(1).ID
        LP_COLUMN_LIST_ALIAS: 
        - type: INTEGER_LITERAL
        - alias: ID
      LP_WHERE: 
        LP_COLUMN_ALIAS: NAMES(1).FIRSTNAME
        LP_COLUMN_LIST_ALIAS: 
        - type: STRING_LITERAL
        - alias: FIRSTNAME
      LP_WHERE: 
        LP_COLUMN_ALIAS: NAMES(1).LASTNAME
        LP_COLUMN_LIST_ALIAS: 
        - type: STRING_LITERAL
        - alias: LASTNAME
    LP_SELECT: 
      LP_TABLE_JOIN: 
        LP_TABLE: NAMES
      LP_CRITERIA: 
        LP_KEYS: 
          LP_KEY: 
          - table_name: NAMES
          - column_name: ID
          - unique_id: 1
          - method: LP_KEY_ADVANCE
          - xref_key: false
          - uses_xref_key: false
        LP_SELECT_OPTIONS: 
          LP_WHERE: 
          LP_SELECT_MORE_OPTIONS: 
            LP_KEYWORDS: 
  LP_OUTPUT: 
    LP_KEY: 
    - table_name: 
    - column_name: 
    - unique_id: 3
    - method: LP_KEY_ADVANCE
    - xref_key: false
    - uses_xref_key: false

[ INFO] PATH:LINENUM DATE TIME : INFO_ENTERING_FUNCTION : Entering print_temporary_table
0|Zero|Cool
1|Acid|Burn
2|Cereal|Killer
3|Lord|Nikon
4|Joey|
5|Zero|Cool
Starting parse
Entering state sss
Next token is token ENDOFFILE (: )
Shifting token ENDOFFILE (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = token ENDOFFILE (: )
-> $$ = nterm semicolon_or_eof (: )
Entering state sss
Reducing stack by rule rrr (line lll):
   $1 = nterm semicolon_or_eof (: )
[ INFO] PATH:LINENUM DATE TIME : INFO_PARSING_DONE : Parsing done for SQL command []
